# brc20shrew-rs

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PROPOSAL.md  PROPOSAL_PROGRAMMABLE.md  README.md  build.rs  debug_metadata.rs  env.js  read_this_for_instructions.txt  wasm-test-runner.sh
.cargo/: config.toml
crates/shrew-bitmap/: Cargo.toml  build.rs
crates/shrew-bitmap/proto/: bitmap.proto
crates/shrew-bitmap/src/: bitmap_indexer.rs  lib.rs  tables.rs  view.rs
crates/shrew-bitmap/src/tests/: bitmap_tests.rs  mod.rs
crates/shrew-brc20/: Cargo.toml  build.rs
crates/shrew-brc20-prog/: Cargo.toml  build.rs
crates/shrew-brc20-prog/proto/: brc20prog.proto
crates/shrew-brc20-prog/src/: BRC20_Controller.hex  controller.rs  lib.rs  prog_indexer.rs  trace_hash.rs  view.rs
crates/shrew-brc20-prog/src/tests/: activation_debug_tests.rs  bis_swap_tests.rs  conformance_tests.rs  controller_tests.rs  delegatecall_tests.rs  evm_integration_tests.rs  frbtc_tests.rs  mod.rs  operation_tests.rs  trace_hash_tests.rs  view_call_tests.rs
crates/shrew-brc20-prog/src/tests/fixtures/: frbtc_bytecode.hex  minimal_proxy_no_viair.hex
crates/shrew-brc20/proto/: brc20.proto
crates/shrew-brc20/src/: brc20.rs  event_hash.rs  lib.rs  tables.rs  view.rs
crates/shrew-brc20/src/tests/: decimal_precision_tests.rs  event_hash_tests.rs  extended_conformance_tests.rs  integration_tests.rs  lifecycle_tests.rs  mod.rs  opi_conformance_tests.rs  parsing_tests.rs  predeploy_tests.rs  self_mint_tests.rs  state_tests.rs  transfer_destination_tests.rs
crates/shrew-evm/: Cargo.toml
crates/shrew-evm/src/: database.rs  lib.rs  precompiles.rs  provider.rs  tables.rs
crates/shrew-evm/src/tests/: btc_precompile_tests.rs  mod.rs  precompile_tests.rs
crates/shrew-ord/: Cargo.toml  build.rs
crates/shrew-ord/proto/: ord.proto
crates/shrew-ord/src/: envelope.rs  indexer.rs  lib.rs  message.rs  tables.rs  view.rs
crates/shrew-ord/src/ord_inscriptions/: inscription.rs
crates/shrew-ord/src/tests/: envelope_tests.rs  indexer_tests.rs  lifecycle_tests.rs  mod.rs  reinscription_tests.rs  view_tests.rs
crates/shrew-pow20/: Cargo.toml  build.rs
crates/shrew-pow20/proto/: pow20.proto
crates/shrew-pow20/src/: lib.rs  pow20_indexer.rs  tables.rs  view.rs
crates/shrew-pow20/src/tests/: mod.rs  pow20_tests.rs
crates/shrew-runes/: Cargo.toml  build.rs
crates/shrew-runes/proto/: runes.proto
crates/shrew-runes/src/: balance_sheet.rs  lib.rs  rune_indexer.rs  tables.rs  view.rs
crates/shrew-runes/src/tests/: balance_sheet_tests.rs  indexer_tests.rs  lifecycle_tests.rs  mod.rs
crates/shrew-sns/: Cargo.toml  build.rs
crates/shrew-sns/proto/: sns.proto
crates/shrew-sns/src/: lib.rs  sns_indexer.rs  tables.rs  view.rs
crates/shrew-sns/src/tests/: mod.rs  sns_tests.rs
crates/shrew-support/: Cargo.toml
crates/shrew-support/src/: constants.rs  event_hash.rs  inscription.rs  lib.rs  utils.rs
crates/shrew-test-helpers/: Cargo.toml
crates/shrew-test-helpers/src/: assertions.rs  bitmap.rs  blocks.rs  brc20.rs  indexing.rs  inscriptions.rs  lib.rs  pow20.rs  runes.rs  sns.rs  state.rs  transactions.rs
crates/shrew-test-helpers/tests/: e2e_tests.rs
examples/: smoke_test.rs
patches/getrandom-0.2.16/: Cargo.toml
patches/getrandom-0.2.16/src/: lib.rs
patches/getrandom-0.2.8/: Cargo.toml
proto/: shrewscriptions.proto
scripts/: build.sh  test.sh
src/: brc20.rs  bst.rs  envelope.rs  indexer.rs  inscription.rs  lib.rs  message.rs  programmable_brc20.rs  tables.rs  utils.rs  view.rs
src/ord_inscriptions/: envelope.rs  mod.rs  tag.rs
src/tests/: brc20_tests.rs  comprehensive_e2e_tests.rs  content_debug.rs  debug_delegation.rs  e2e_prost_tests.rs  envelope_debug.rs  envelope_manual_debug.rs  envelope_tests.rs  helpers.rs  indexer_tests.rs  inscription_indexing_tests.rs  inscription_tests.rs  integration_tests.rs  mod.rs  ordinals_fundamental_test.rs  simple_tests.rs  simple_view_test.rs  utils.rs  view_tests.rs
tests/: integration_tests.rs  test_utils.rs  view_tests.rs
