[package]
name = "brc20shrew"
version = "0.1.0"
edition = "2021"
authors = ["brc20shrew-rs contributors"]
description = "A WASM-based inscriptions indexer for the metashrew environment"
license = "MIT"
repository = "https://github.com/brc20shrew/brc20shrew-rs"
keywords = ["bitcoin", "inscriptions", "indexer", "wasm", "metashrew"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-utils = []
mainnet = []
cache = []

[dependencies]
# Core dependencies
anyhow = "1.0"
bitcoin = { version = "0.30.2", default-features = false, features = ["serde"] }
bitcoin_hashes = "0.12"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
lazy_static = "1.4"
thiserror = "1.0"
bincode = "1.3"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2" }
prost = "0.12.6"
revm = { version = "3.5.0", default-features = false, features = ["serde"] }
revm-database-interface = "3.0.0"
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
rust-embed = "8.5.0"
async-trait = "0.1.81"

# Metashrew dependencies (using git since not published to crates.io)
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", branch = "sandshrewmetadev/v9.1.0", default-features = false }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew", branch = "sandshrewmetadev/v9.1.0", default-features = false }
ordinals = { git = "https://github.com/ordinals/ord" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/moka" }

[dev-dependencies]
# Testing utilities
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"], branch = "sandshrewmetadev/v9.1.0", default-features = false }

[build-dependencies]
protoc-bin-vendored = "3.0.0"
prost-build = "0.12.6"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[patch.crates-io]
getrandom = { path = "patches/getrandom-0.2.16" }
