[workspace]
resolver = "2"
members = [
    "crates/shrew-support",
    "crates/shrew-ord",
    "crates/shrew-brc20",
    "crates/shrew-runes",
    "crates/shrew-bitmap",
    "crates/shrew-sns",
    "crates/shrew-pow20",
    "crates/shrew-evm",
    "crates/shrew-brc20-prog",
    "crates/shrew-test-helpers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/brc20shrew/brc20shrew-rs"

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
once_cell = "1.19"
lazy_static = "1.4"
sha2 = "0.10"
regex = "1"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }
bitcoin_hashes = "0.14"
ordinals = "0.0.15"

# BIP322
bip322 = "0.0.10"

# Protobuf
prost = "0.12.6"
prost-build = "0.12.6"
protoc-bin-vendored = "3.0.0"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
getrandom = "0.2"

# Metashrew
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", tag = "v9.0.3-beta.2", default-features = false }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew", tag = "v9.0.3-beta.2", default-features = false }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/moka" }

# EVM
revm = { version = "34.0.0", default-features = false, features = [
    "std", "serde",
    "optional_balance_check", "optional_block_gas_limit",
    "optional_eip3607", "optional_no_base_fee",
    "optional_fee_charge", "optional_priority_fee_check",
] }
alloy-primitives = { version = "1.1.0", default-features = false, features = ["std", "serde"] }
alloy-sol-types = { version = "1.0.9", default-features = false, features = ["std"] }

# Internal crates
shrew-support = { path = "crates/shrew-support" }
shrew-ord = { path = "crates/shrew-ord", default-features = false }
shrew-brc20 = { path = "crates/shrew-brc20", default-features = false }
shrew-runes = { path = "crates/shrew-runes", default-features = false }
shrew-bitmap = { path = "crates/shrew-bitmap", default-features = false }
shrew-sns = { path = "crates/shrew-sns", default-features = false }
shrew-pow20 = { path = "crates/shrew-pow20", default-features = false }
shrew-evm = { path = "crates/shrew-evm" }
shrew-brc20-prog = { path = "crates/shrew-brc20-prog", default-features = false }
shrew-test-helpers = { path = "crates/shrew-test-helpers" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[patch.crates-io]
getrandom = { path = "patches/getrandom-0.2.16" }
