[package]
name = "shrew-runes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runes indexer WASM program for the shrew suite"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["entrypoint"]
entrypoint = []
test-utils = []

[dependencies]
shrew-support = { workspace = true }
shrew-ord = { workspace = true, default-features = false }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
ordinals = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
metashrew-core = { workspace = true }
metashrew-support = { workspace = true }

[dev-dependencies]
metashrew-core = { workspace = true }
wasm-bindgen-test = { workspace = true }
shrew-test-helpers = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
