[package]
name = "shrew-sns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SNS (Sats Names Service) indexer WASM program for the shrew suite"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["entrypoint"]
entrypoint = []

[dependencies]
shrew-support = { workspace = true }
shrew-ord = { workspace = true, default-features = false }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
sha2 = { workspace = true }
prost = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true }
metashrew-core = { workspace = true }
metashrew-support = { workspace = true }

[dev-dependencies]
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"], branch = "sandshrewmetadev/v9.1.0", default-features = false }
shrew-test-helpers = { workspace = true }
wasm-bindgen-test = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
